--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<h1>Hi hi hi!</h1>
-
-<h2>wwlalala</h2>
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
