evening mess about - added js and ornhub banner

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <title>Welcome To Ornhub</title>
+    <meta name="description" content="Ornhub is a collection of tweets from David Ornstein, BBC Sport journalist">
+    <meta property="og:title" content="Ornhub - a collection of tweets by David Ornstein">
+    <meta property="og:image" content="XXXX">
+    <meta property="og:description" content="Ornhub is a collection of tweets from David Ornstein, BBC Sport journalist">
+    <meta property="og:site_name" content="Ornhub"/>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <div class="hub">
+      <span contenteditable="false">Orn</span>
+      <span contenteditable="false">hub</span>
+    </div>
+    <script src="twitter.js"></script>
+  </body>
 </html>
